Alignment for body element fixed

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
 
 body {
-  font-family: sans-serif
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 h1, h2, h3, h4, h5, p {
